--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asttokens==2.4.1
 autopep8==2.0.4
 black==24.3.0
+cairocffi==1.6.1
+CairoSVG==2.7.1
+cffi==1.16.0
 click==8.1.7
 comm==0.2.1
 contourpy==1.2.0
+cssselect2==0.7.0
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 executing==2.0.1
 fonttools==4.49.0
 ipykernel==6.29.2
@@ -32,6 +37,7 @@ psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.11.1
+pycparser==2.21
 Pygments==2.17.2
 pygraphviz==1.12
 pyparsing==3.1.1
@@ -42,7 +48,9 @@ python-dateutil==2.8.2
 pyzmq==25.1.2
 six==1.16.0
 stack-data==0.6.3
+tinycss2==1.2.1
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
 wcwidth==0.2.13
+webencodings==0.5.1
