state frame gen

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ venv/
 output/
 graphs/
 frames/
+!frames/selfish_miner 01.html
+!frames/selfish_miner 02.html
 
 blockchain_simulation.log
 results.json
